@@ -1,2 +1,1 @@
 =sys-kernel/upkern-3.1.4
-<sys-kernel/upkern-2.0.14
