@@ -1,18 +1,12 @@
-DIST upkern-2.0.11.tar.bz2 9820 RMD160 025d799d672ee4cb0b48ae7d4a9f1742a6169fd0 SHA1 5715de71573e1c74b602832ece95abf591019ca2 SHA256 205a6ed5d04ae94c849253f189296de40a29a7314e0b3fd6c5102c46bb4e7b8e
-DIST upkern-2.0.12.tar.bz2 9956 RMD160 4350f34df39a3856c0cd336efb2f62d3eacea02f SHA1 5c1cfdad2e888e6d07277ac056bc9abf97966883 SHA256 ab4747541195ba35e27659c63b917910bb7ea187e45c820fddbde57ce7a916e3
-DIST upkern-2.0.13.tar.bz2 3263 RMD160 7539b3f3558789c0e109679266db8e69a47d7418 SHA1 3d105988aeb7e9962139a9e8440813b749086e60 SHA256 46c157a15887a1892e7b03d5a7834e7e013942b225c55892fe4efd1b139c3ea8
 DIST upkern-2.0.14.tar.bz2 9896 RMD160 9dc95fac0947346d81dc1243ac45af310b10faaa SHA1 4c4257ab9b02ac9a85cbd5810edc45baf556104b SHA256 8a6f216796b99779798ad68433b338dd35491844a088afa236cf20ae9364736d
 DIST upkern-3.1.2.tar.bz2 17055 RMD160 bca389ef745dbaeb157c6d5f0ba208cf2e5f3aaf SHA1 2efbd34186e892294842480aedaad7c80676f966 SHA256 e976630f6d7a786ce5480432b544282c9b92a46503806bd6286a6f9f4ff685d0
 DIST upkern-3.1.3.tar.bz2 18132 RMD160 79fca4514bfbbf1bad25e712410882b280c1ad65 SHA1 6fd3c47f88b722e5481406d9048196fb851c23b3 SHA256 636e61b89e43e5fbf87915fb56006a045dbdac2efb52533f2a55a083b776731c
 DIST upkern-3.1.4.tar.bz2 18175 RMD160 7dd4d980128392762b090f44de0eee9ec4291e11 SHA1 a6783997a99b04673ad799b632f54824fcddd3e4 SHA256 ef0f36e69cd8bab65f32936d05ecc80325ae6dcd9e177c6bf6702600def9723f
 DIST upkern-3.1.5.tar.bz2 18151 RMD160 a912354a90319851d1d5ab126e149d369ec26673 SHA1 83b143b41437d7881fab602f8e49cc87193f439b SHA256 2dc168cf814b3d0153e718e8c35ca74fd6eaa0bcfb118cdb30df4fb92eaf38b9
-EBUILD upkern-2.0.11-r1.ebuild 664 RMD160 3334f42bbd16388fd7c27583d4ee6cd3bca47734 SHA1 f720089a63e7342613c047f7b2ea9eaa0f546365 SHA256 5dd696f668b3a33decf03b4473a88a7b2f4a7b875fd6a90aa763f21e7eb4fa3f
-EBUILD upkern-2.0.12.ebuild 588 RMD160 6e37da7e4673db24f9023af51d9d3161c6df87c0 SHA1 ae536faacc04e2899e1675fa0a71113ac83a0cea SHA256 16e89d066ab84fdd30e8d7a01ede8790686a4074bab2762cd2e3e278bcaf5d13
-EBUILD upkern-2.0.13.ebuild 588 RMD160 6e37da7e4673db24f9023af51d9d3161c6df87c0 SHA1 ae536faacc04e2899e1675fa0a71113ac83a0cea SHA256 16e89d066ab84fdd30e8d7a01ede8790686a4074bab2762cd2e3e278bcaf5d13
 EBUILD upkern-2.0.14.ebuild 588 RMD160 6e37da7e4673db24f9023af51d9d3161c6df87c0 SHA1 ae536faacc04e2899e1675fa0a71113ac83a0cea SHA256 16e89d066ab84fdd30e8d7a01ede8790686a4074bab2762cd2e3e278bcaf5d13
 EBUILD upkern-3.1.2.ebuild 734 RMD160 7ea7276a75bc8ad54055bb9eba262c3c6e17d672 SHA1 86b71cda3068922dc46eba6fdd2daf412f2784e7 SHA256 ee60e2bec35c0aacd86628984252af272e5d83f38763d3a13d9d895659e12be2
 EBUILD upkern-3.1.3.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
 EBUILD upkern-3.1.4.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
 EBUILD upkern-3.1.5.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
-MISC ChangeLog 1557 RMD160 4d21114af69a22efca2ec80c1348e3b415a2f1aa SHA1 2af362647a7bfff554ba593b2d2db94cf1e2eb40 SHA256 02a0c5b096f7be65fc8e26a20aaca261b6252184dad531e3e9cc7685f0274cd4
+MISC ChangeLog 1706 RMD160 302304501216e9dbb773c8aabbcf052e43faa9d4 SHA1 b8d35246a820c63cb8484453172f189bbb02a03f SHA256 3be92f59bda6b133db7ca21c3536946088be0662ed365cf81439db70f9739b52
 MISC metadata.xml 405 RMD160 a97224d51d49407236780494c188ecd441fd919c SHA1 3d9c627583480affd484ac0b1812c75078c2d27f SHA256 cd20665d6d4bcbf01de020e45ea7268c9f8149d179f64228ac18113de0b533f7
